# ops-aaa-utils

./: .gitignore  .gitreview  AAA_Component_Design.md  AAA_DESIGN.md  AAA_README.md  AUTHORS  CMakeLists.txt  DESIGN.md  README.md  aaa-utils-pamcfg.py  aaautilspamcfg.py  autoprovision.py  cookiesecret.py  ops_aaautilspamcfg.py  rbac.py  setup.py  userauth.py
include/: aaa_vty.h  rbac.h  vtysh_ovsdb_aaa_context.h
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/: radius_component_tests.md  tacacs_component_tests.md  test_aaa_ct_aaautils.py  test_ct_autoprovisionutils.py  test_ct_radius_config.py  test_ct_tacacs_config.py  test_sftp_ct_aaautils.py  test_supportability_ct_aaautils.py  test_vtysh_ct_aaa.py
ops-tests/feature/: tacacs_feature_tests.md  test_aaa_ft_authentication.py  test_aaa_ft_radius_authentication.py  test_aaa_ft_radius_src_intf.py  test_aaa_ft_tacacs_authentication.py  test_aaa_ft_tacacs_authorization.py  test_aaa_ft_tacacs_src_intf.py  test_sftp_ft.py
pam_libraries/radius/: CMakeLists.txt
pam_libraries/radius/src/: md5.c  md5.h  pam_radius_auth.c  pam_radius_auth.h  radius.h
pam_libraries/tacacs/: CMakeLists.txt  pam_tacplus.c  pam_tacplus.h  support.c  support.h  tacc.c
pam_libraries/tacacs/libtac/: CMakeLists.txt  author_utils.c  pam_tacplus.c  pam_tacplus.h  support.c  support.h
pam_libraries/tacacs/libtac/include/: cdefs.h  libtac.h  tacplus.h
pam_libraries/tacacs/libtac/lib/: acct_r.c  acct_s.c  attrib.c  authen_r.c  authen_s.c  author_r.c  author_s.c  connect.c  cont_s.c  crypt.c  hdr_check.c  header.c  magic.c  magic.h  md5.c  md5.h  messages.c  messages.h  read_wait.c  version.c  xalloc.c  xalloc.h
src/cli/: CMakeLists.txt  aaa_vty.c  vtysh_ovsdb_aaa_context.c
src/lib/: CMakeLists.txt  getpwnam-preload.c
src/rbac/: CMakeLists.txt  rbac.c  rbac.pc.in
test/: lighttpd.conf  test_aaa_ct_aaautils.py  test_ztp_ct_autoprovisionutils.py
tests/: AAA_Component_Test.md  aaautils_test.md  autoprovision_component_test.md  chap_component_test.md  rbac_component_test.md  sftpserver_test.md  test_aaa_ct_aaautils.py  test_ct_autoprovisionutils.py  test_sftp_ct_aaautils.py  test_supportability_ct_aaautils.py  test_vtysh_ct_aaa.py  test_ztp_ct_autoprovisionutils.py
tests/rbac_ut/: CMakeLists.txt  rbac_ut.cpp  rbac_ut.py  run_rbac_ut
